--- a/public/privacy/index.html
+++ b/public/privacy/index.html
@@ -2,13 +2,13 @@
 <html lang="en" data-ng-app="app">
 <head>
   <meta charset="utf-8" />
- <title>ITISDE |  IT Innovative Skills & Data Engineering</title>	
- <meta name="keywords" content="IT Innovative Skills and Data Engineering " />
- <meta name="description" content="Administration E-Concours, Dashboard  E-Recrutement| Espace Candidat -  Ministère de l'Education Nationale, de la Formation professionnelle, de l'Enseignement Supérieur et de la Recherche Scientifique -Département de l'Enseignement Supérieur et de la Recherche Scientifique - Direction des ressources humaines" />
- <meta name="author" content="ZAHR-EDDINE  EL BOUZIDI" />
+ <title>Student Housing | Real Estate Agency</title>	
+ <meta name="keywords" content="Student Housing | Real Estate Agency " />
+ <meta name="description" content="Student Housing, Real Estate Agency, Real estate, real estate, logement étudiant, logement étudiant en france, logement étudiant au maroc, frensh housing, morocco housing" />
+ <meta name="author" content="ITISDE - IT Innovative Skills and Data Engineering" />
  <meta name="google-site-verification" content="ye4yOPU969yCk6aBplPYDFBN-g2MSFIpqXtyVSwTd_c" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <link rel="shortcut icon" href="img/itisde_logo_head.png" />
+  <link rel="shortcut icon" href="" />
  <!-- <link 
   rel="stylesheet"
   href="https://cdn.rtlcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
